--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="dit">
-            <img src="images/di.jpeg" alt="">
+            <img src="images/di.jpeg" alt="dit.io">
         </div>
        <nav class="nav-bar">
         <a href="#">Feature</a>
@@ -18,15 +18,16 @@
         <a href="#">Product</a>
         <a href="#">Pricing</a>
         <a href="#">Feedbacks</a>
+        <div class
         <button type="submit_button" id="submit_button">Log in </button>   
         <button type="submit_button" id="submit">Sign up </button>      
        </nav>
         </header>
-    <main>
+
         <section class="improve-charge">
             <div class="left-improve-charge">
                 <h1>Improve the way <span id="charge">you charge</span>,with one click</h1>
-                <p>Deski deliverd blazing fast perfomance,strinking word solution</p>
+                <p>Deski deliverd blazing fast perfomance,strinking word solution</p><br>
                 <div class="buttons">
                     <button id="apple-btn"><i class="fa-brands fa-apple">Apple Store</i></button>
                    <button type="button" id="submit-play"><img width="48" height="48" src="https://img.icons8.com/color/48/google-play.png" alt="google-play"/>Play Store</button>
@@ -65,12 +66,12 @@
         </section>
         <section class="software-growth">
             <h2>Over 32k+ software business growing with dit.io</h2>
-            <div class="icons">
+            <div class="logos">
                 <img width="48" height="48" src="https://img.icons8.com/fluency/48/microsoft.png" alt="microsoft"/>
-                <i class="fa-brands fa-trello">Trello</i>
+                <img src="images/trello.svg" alt="trello" id="trello">
                 <img width="48" height="48" src="https://img.icons8.com/fluency/48/google-logo.png" alt="google-logo"/>
-                <i class="fa-brands fa-dropbox">Dropbox</i>
-                <i class="fa-brands fa-slack"></i>
+                <img width="48" height="48" src="https://img.icons8.com/color/48/dropbox.png" alt="dropbox"/>
+                <img width="100" height="100" src="https://img.icons8.com/plasticine/100/slack-new.png" alt="slack-new"/>
                 </div>
         </section>
         <section class="product-worked-on">
