added some styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">Product</a>
         <a href="#">Pricing</a>
         <a href="#">Feedbacks</a>
-        <div class
+        
         <button type="submit_button" id="submit_button">Log in </button>   
         <button type="submit_button" id="submit">Sign up </button>      
        </nav>
@@ -28,7 +28,7 @@
             <div class="left-improve-charge">
                 <h1>Improve the way <span id="charge">you charge</span>,with one click</h1>
                 <p>Deski deliverd blazing fast perfomance,strinking word solution</p><br>
-                <div class="buttons">
+                <div class="buttons-improve-charge">
                     <button id="apple-btn"><i class="fa-brands fa-apple">Apple Store</i></button>
                    <button type="button" id="submit-play"><img width="48" height="48" src="https://img.icons8.com/color/48/google-play.png" alt="google-play"/>Play Store</button>
                     <p>Different platforms?<a href="#">Contact us</a></p>
@@ -49,7 +49,7 @@
                 <h3>22</h3>
                 <p>Worked days</p>
             </div>
-            <h3>1500</h3>
+            <h2>1500</h3>
             <p>Monthly salary</p>
             <h3>750</h3>
             <p>Salary available</p>
@@ -94,39 +94,38 @@
         </div>
         </section>
 
-        <section class="numbers-users">
+        <div class="numbers-users">
             <h1>Okay, Let's see</h1>
-            <span id="diti.io">diti.io in numbers</span>
+            <p id="diti.io">diti.io in numbers</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Aliquam nec platea</p>
             <div class="user-numbers">
                 <div class="download-users">
                     <div class="downloads">
-                    <h1>50.4K</h1>
-                    <p id="highlighted-p">Downloads</p>
+                        <h1>50.4K</h1>
+                        <p id="highlighted-p">Downloads</p>
                     </div>
-                 <div>
-                    <h1>20K</h1>
-                    <p id="highlighted-p">Active users</p>
-                 </div>
+                    <div>
+                        <h1>20K</h1>
+                        <p id="highlighted-p">Active users</p>
+                    </div>
                 </div>
                  <div class="group-subscribers">
-                    <div class="group">
-                    <h1>300+</h1>
-                    <p id="highlighted-p">Using group</p>
-                    </div>
-                    <div class="subscribers">
-                    <h1>10K</h1>
-                    <p id="highlighted-p">Subscribers</p>
-                    </div>
-                </div>
-
+                     <div class="group">
+                        <h1>300+</h1>
+                        <p id="highlighted-p">Using group</p>
+                     </div>
+                        <div class="subscribers">
+                            <h1>10K</h1>
+                            <p id="highlighted-p">Subscribers</p>
+                        </div>
+                 </div>
+            </div>
                 <div class="left-create-account">
-                    <div class="accounts">
                      <div class="create-account">
                         <p>How to create account</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                         <button id="watch">Watch</button>
-                     </div>
+                    </div>
                     <div class="animation">
                         <div class="anime-man">
                             <img src="images/animate.jpeg" alt="gent anime">
@@ -134,18 +133,16 @@
                         <div class="anime-lady">
                             <img src="images/animatelady.jpeg" alt="anime lady">
                         </div>
-                        </div>
                     </div>
                     <div class="study-with">
                         <i class="fa-solid fa-anchor"></i> 
                         <h3>Study with me</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <button id="join">Join</button>
-
                     </div>
                 </div>
- </section>
- <section class="help-customers">
+    </div>
+ <div class="help-customers">
     <h1 class="help-customers-h1">We are helping <span id="help-customers-p">customer globally</span>everytime</h1>
     <div class="mobile-app">
         <i class="fa-solid fa-mobile"></i>
@@ -173,7 +170,8 @@
          <img src="images/edwin.avif" alt="angel animate" id="edwin-img">
          <p>Angel jorina</p>
     </div>
- </section>
+</div>
+
  <p id="clients-words"><span id="words">Some words</span> Froms ur clients</p>
  <section class="words-clients">
     <div class="clients">
@@ -196,8 +194,10 @@
     <div class="users">
         <p>Over <strong>50,000+ Users</strong></p>
         <h1>Download diti.io Mobile App</h1>
+    <div class="buttons-users">
         <button id="apple-button"><i class="fa-brands fa-apple">Apple Store</i></button>  
         <button type="button" id="submit-play"><img width="48" height="48" src="https://img.icons8.com/color/48/google-play.png" alt="google-play"/>Play Store</button>
+    </div>
         <p>Different platforms?<a href="#">Contact us</a></p>
     </div>
 
@@ -243,7 +243,7 @@
     </div>
     </section>
     <footer>
-        <div class="footer"><
+        <div class="footer">
 <p>&copy; copyright@diti.io 2022. All rights reserved.</p>
 <p>Terms and conditions</p> |
 <p>Privacy and policy</p>  
